fix: footer overflow

--- a/css/style.sass
+++ b/css/style.sass
@@ -99,7 +99,7 @@ body
   font-size: 18px
 p
   font-family: $family-sans-serif
-  line-height: 2em
+  line-height: 2rem
 h1
   font-family: $family-code
   font-size: 2rem
